# plutus-personal-playground

./: README.md  hie.yaml  plutus-personal-playground.cabal  shell.nix
app/: hello.hs
docs/: LearningsParallelAuction.md
lecture-notes/: fetch-from-knowledge-base.sh  plutus-pioneer-program-lecture-notes-01.md  plutus-pioneer-program-lecture-notes-02.md  plutus-pioneer-program-lecture-notes-03.md  plutus-pioneer-program-lecture-notes-04.md  plutus-pioneer-program-lecture-notes-05.md  plutus-pioneer-program-lecture-notes-06.md  plutus-pioneer-program-lecture-notes-07.md  plutus-pioneer-program-lecture-notes-08.md  plutus-pioneer-program-lecture-notes-09.md  plutus-pioneer-program-lecture-notes-10.md
src/: AuctionParallel.hs  AwaitTxConfirmedIssue.hs  InputTxDatumsIssue.hs  LoggingUtil.hs  ParallelAuction.hs  ParallelAuctionTrace.hs  ParallelContract.hs  ParallelContractTrace.hs  PayBackIssue.hs
src/Issues/: AwaitTxConfirmedIssue.hs  InputTxDatumsIssue.hs  PayBackIssue.hs
src/ParallelAuction/: ParallelAuction.hs  ParallelAuctionTrace.hs
src/Plutus/Contracts/: Currency.hs  PubKey.hs
src/Utils/: LoggingUtil.hs  UtxoUtil.hs
