Cabal-Version:      2.4
Name:               plutus-personal-playground
Version:            0.1.0.0
Author:              Matthias Putz
Maintainer:          matthias@simpl-rocks.com
Build-Type:          Simple
Copyright:           © 2021 Matthias Putz
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     ParallelContract
                     , ParallelContractTrace
                     , Plutus.Contracts.Currency
                     , Plutus.Contracts.PubKey
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , freer-extras
                     , hashable
                     , lens
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     --, plutus-use-cases
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable hello
  hs-source-dirs:      app
  main-is:             hello.hs
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
