Cabal-Version:      2.4
Name:               plutus-personal-playground
Version:            0.1.0.0
Author:             Matthias Putz
Maintainer:         matthias@simpl-rocks.com
Build-Type:         Simple
Copyright:          © 2021 Matthias Putz
License:            Apache-2.0
License-files:      LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Issues.AwaitTxConfirmedIssue
                     , Issues.InputTxDatumsIssue
                     , Issues.PayBackIssue
                     , ParallelAuction.ParallelAuction
                     , ParallelAuction.ParallelAuctionTrace
                     , Plutus.Contracts.Currency
                     , Plutus.Contracts.PubKey
                     , Utils.LoggingUtil
                     , Utils.UtxoUtil
                     , Week04.Trace
                     , Week04.Vesting
  build-depends:       aeson
                     , aeson-pretty
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , data-default
                     , freer-extras
                     , freer-simple
                     , hashable
                     , lens
                     , lens-aeson
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , pretty-simple
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , text
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
